html file created

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 
 
-    <link rel="stylesheet" href="todo.css">
-    <script src="todo.js"></script>
+    <link rel="stylesheet" href="style.css">
+    <script src="script.js"></script>
 </body>
 </html>
